--- a/css/main.css
+++ b/css/main.css
@@ -8,15 +8,29 @@ body{
     overflow-x: hidden;
 }
 
-section{
-    display: block;
+header{
+    display:flex;
+    flex-direction: column;
+    text-align: center;
+    text-decoration: none;
+}
+
+.banner{
+    color:#49403a;
+    text-align: center;
+}
+
+.publicidad{
+    background-color: #cfced099;
     color: #4F453F;
     font-family: "Montserrat";
+    text-align: center;
 }
 
 h2{
     color: #4F453F;
     font-family: "Montserrat";
+    text-align: center;
 }
 
 .logo{
@@ -34,11 +48,110 @@ h2{
     list-style: none;
 }
 
+.menu a {
+    color: #4F453F;
+    text-decoration: none;
+    border: 2px solid white;
+    padding: 5px 15px;
+    border-color: #EBD8D0;
+    background-color: #EBD8D0;
+    border-radius: 7%;
+    font-family: "Montserrat";
+    opacity: 0.6;
+}
+
+a:hover{
+    opacity: 1.0;
+}
+
 .bolsa{
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 8%;
+}
+
+.carrito {
+    left: 95%;
+    width: 12%;
+}
+
+.imagenPrincipal {
+    width: 100%;
+    height: 35%;
+    top: 10px;
+}
+
+#grilla{
+    display: grid;
+    grid-template-areas:
+    "accesoCuotas" 
+    "accesoAccesorios"
+    "accesoProducto";
+    grid-template-rows: 30% 30% 30%; 
+    justify-content: center;
+}
+
+#grilla a img:hover {
+    opacity: 0.75;
+}
+
+.accesoCuotas{
+    grid-area: accesoCuotas;
+}
+
+.accesoAccesorios{
+    grid-area: accesoAccesorios;
+}
+
+.accesoProducto{
+    grid-area: accesoProducto;
+}
+
+.grande {
+    width: 70%;
+    height: 90%;
+    margin: 15%;
+    border-radius: 3%;
+    opacity: 1;
+    object-fit: cover;
+}
+
+.chico {
+    width: 70%;
+    height: 94%;
+    margin: 15%;
+    border-radius: 3%;
+    opacity: 1;
+    object-fit: cover;
+}
+
+.adicionales {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    font-family: "Montserrat";
+    color: #4F453F;
+    gap: 35px;
+}
+
+.redes {
+    text-align: center;
+    align-items: center;
+    font-family: "Montserrat";
+    padding-top: 7.5%;
+    padding-bottom: 2.5%;
+}
+
+.redes a{
+    text-decoration: none;
+}
+
+.redes a img {
+    width: 50px;
+    padding-top: 2%;
+    margin: 0 15px;
 }
 
 @media (min-width: 768px){
@@ -67,69 +180,46 @@ h2{
         row-gap: 50%;
     }
 
+    #grilla{
+        display: grid;
+        grid-template-areas:
+        "accesoCuotas accesoAccesorios"
+        "accesoCuotas accesoProducto";
+        grid-template-columns: 50% 50%;
+    }
+
+    .grande {
+        width: 95%;
+        height: 97%;
+        margin: 5%;
+        border-radius: 3%;
+        opacity: 1;
+        object-fit: cover;
+    }
+
+    .chico {
+        width: 90%;
+        height: 94%;
+        margin: 5%;
+        border-radius: 3%;
+        opacity: 1;
+        object-fit: cover;
+    }
+
+    .adicionales {
+       display: flex;
+       flex-direction: row;
+       justify-content: center;
+       flex-wrap: wrap;
+    }
+    
     #grilla-contacto{
         display: grid;
         grid-template-areas:
         "datos mapa"
         "datos mapa";
         grid-template-columns: 50% 50%;
-    }   
-}
-
-.menu a {
-    color: #4F453F;
-    text-decoration: none;
-    border: 2px solid white;
-    padding: 5px 15px;
-    border-color: #EBD8D0;
-    background-color: #EBD8D0;
-    border-radius: 7%;
-    font-family: "Montserrat";
-    opacity: 0.6;
-}
-
-a:hover{
-    opacity: 1.0;
-}
-
-header{
-    display:flex;
-    flex-direction: column;
-    text-align: center;
-    text-decoration: none;
-}
-
-
-.imagenPrincipal {
-    width: 100%;
-    height: 35%;
-    top: 10px;
-}
-
-.publicidad{
-    background-color: #cfced099;
-    color: #4F453F;
-    font-family: "Montserrat";
-    text-align: center;
-}
-
-.banner{
-    color:#49403a;
-    text-align: center;
-}
-
-.carrito {
-    left: 95%;
-    width: 12%;
-}
-
-#grilla{
-    display: grid;
-    grid-template-areas:
-    "accesoCuotas accesoAccesorios"
-    "accesoCuotas accesoProducto";
-    grid-template-rows: 30% 30%; 
-    grid-template-columns: 50% 65%;
+    } 
 }
 
 #grilla-contacto{
@@ -138,68 +228,6 @@ header{
     "datos"
     "mapa";
     grid-template-rows: 70% 50%; 
-}
-
-.accesoCuotas{
-    grid-area: accesoCuotas;
-}
-
-.accesoAccesorios{
-    grid-area: accesoAccesorios;
-}
-
-.accesoProducto{
-    grid-area: accesoProducto;
-}
-
-.grande {
-    width: 95%;
-    height: 98%;
-    margin: 5%;
-    border-radius: 3%;
-    opacity: 1;
-    object-fit: cover;
-}
-
-.chico {
-    width: 70%;
-    height: 94%;
-    margin: 5%;
-    border-radius: 3%;
-    opacity: 1;
-    object-fit: cover;
-}
-
-#grilla a img:hover {
-    opacity: 0.75;
-}
-
-.adicionales {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    text-align: center;
-    font-family: "Montserrat";
-    color: #4F453F;
-    gap: 35px;
-}
-
-.redes {
-    text-align: center;
-    align-items: center;
-    font-family: "Montserrat";
-    padding-top: 7.5%;
-    padding-bottom: 2.5%;
-}
-
-.redes a{
-    text-decoration: none;
-}
-
-.redes a img {
-    width: 50px;
-    padding-top: 2%;
-    margin: 0 15px;
 }
 
 .Novedades {
